[project]
name = "self-healing-classifier"
version = "0.1.0"
description = "Self-Healing Classification DAG with Fine-Tuned Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "langchain-core>=0.3.66",
    "langgraph>=0.4.8",
    "numpy>=2.3.1",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.0.0",
    "tokenizers>=0.21.2",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
